--- a/android-developer.html
+++ b/android-developer.html
@@ -49,11 +49,15 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://intellipro.applytojob.com/apply/Fc8A2aKTsy/Android-Developer'>Android Developer - IntelliPro Group Inc. - Career Page</a></h5> 
+<p><span class="badge badge-light">Redwood City, CA</span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
 <h5><a href='https://cellular.join.com/jobs/451954-android-developer-m-w-d'>Job @ CELLULAR (Hamburg): Android Developer (m/w/d) | JOIN</a></h5> 
 <p><span class="badge badge-light">Hamburg Hamburg, Deutschland</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.42jobs.io/android/jobs/8427-senior-android-developer'>
+<h5><a href='https://www.42jobs.io/android/jobs/8427-senior-android-developer'>
 Remote Senior Android Developer at camlCase | Android jobs | 42jobs.io
 
 </a></h5> 
@@ -71,7 +75,7 @@ Android Developer at Dyson in Wiltshire | Android jobs | 42jobs.io
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tataunistore/b3d98457-43b8-410d-b531-d40aac5b4e62'>Tata UniStore Limited - Android Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/tataunistore/b3d98457-43b8-410d-b531-d40aac5b4e62'>Tata UniStore Limited - Android Developer</a></h5> 
 <p><span class="badge badge-light">Mumbai</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -106,7 +110,7 @@ Android Developer at Dyson in Wiltshire | Android jobs | 42jobs.io
 <p>1 day ago ... HomeAdvisor is seeking an Android Developer for our team of smart, dedicated 
 mobile developers. We're looking for a developer who has solid, demonstrable?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/careermovement/job/at5qqmbxhzh531onf1xtqt8gba'>Senior Android Developer/Android Architect | Career Movement</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/careermovement/job/at5qqmbxhzh531onf1xtqt8gba'>Senior Android Developer/Android Architect | Career Movement</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CAUnited States</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -160,7 +164,7 @@ mobile developers. We're looking for a developer who has solid, demonstrable?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.applythis.net/job/?a=021808F20.0'>
+<h5><a href='https://www.applythis.net/job/?a=021808F20.0'>
 	
     Apply for Lead Android Developer -  Woking, United Kingdom - IT and Internet - SS003 - Find a job, build a career
 
@@ -260,7 +264,7 @@ development and maintenance of applications aimed at the public as well as?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
-<h5><a href='https://apply.workable.com/qivos/j/4146C92C6C/'>Android Developer - QIVOS</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/qivos/j/4146C92C6C/'>Android Developer - QIVOS</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... As an Android Developer you will be part of our Platform Development team, 
 where you will design and build the next generation of our mobile applications.</p>
@@ -286,7 +290,7 @@ participating in driving our already successful banking service to new heights.<
 <p><span class="badge badge-light">Sunnyvale, CA  Mountain View San Francisco</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<h5><a href='https://zattoo.join.com/jobs/434902-android-developer'>Job @ Zattoo (Berlin): Android Developer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://zattoo.join.com/jobs/434902-android-developer'>Job @ Zattoo (Berlin): Android Developer | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -435,7 +439,7 @@ Apply for this job. Cornershop es un servicio que te lleva el s?per y distintas?
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cellular.join.com/jobs/422756-android-developer-m-w-d'>Job @ CELLULAR (Hamburg): Android Developer (m/w/d) | JOIN</a></h5> 
+<h5><a href='https://cellular.join.com/jobs/422756-android-developer-m-w-d'>Job @ CELLULAR (Hamburg): Android Developer (m/w/d) | JOIN</a></h5> 
 <p><span class="badge badge-light">Hamburg, Deutschland</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -447,7 +451,7 @@ Apply for this job. Cornershop es un servicio que te lleva el s?per y distintas?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://karmarama.workable.com/j/7D5726D33D'>Karmarama - Jobs: Senior Android Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://karmarama.workable.com/j/7D5726D33D'>Karmarama - Jobs: Senior Android Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -484,7 +488,7 @@ Remote Android Developer at komoot | Android jobs | 42jobs.io
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-08</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/projekt202/7b0cf8e9-e875-44d5-a312-3c341d5edcc4'>projekt202 - Senior Android Developer (contract)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/projekt202/7b0cf8e9-e875-44d5-a312-3c341d5edcc4'>projekt202 - Senior Android Developer (contract)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -495,10 +499,6 @@ Remote Android Developer at komoot | Android jobs | 42jobs.io
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oz988fwI&__jvst=Employee+Referral&__jvsd=skamghwS&__jvsc=Twitter&bid=ngSe3MwG'>ServiceNow Careers - Senior Android Developer</a></h5> 
 <p><span class="badge badge-light">Tel Aviv, Israel  Tel Aviv</span></p>
 <p>Posted on:: 2019-10-08</p>
-<hr/>
-<h5><a href='https://oura-health-ltd.workable.com/j/B97906AF9A'>Oura Health Ltd - Jobs: Android Developer - Apply online</a></h5> 
-<p><span class="badge badge-light">Northern Ostrobothnia, Finland</span></p>
-<p>Posted on: 2019-10-08</p>
 <hr/>
 
 
